<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/account_registration">
        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:hint="@string/email"
            android:width="200dp"
            android:id="@+id/emailBox">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textSize="16sp"
            android:hint="@string/password"
            android:width="200dp"
            android:id="@+id/passwordBox">
        </EditText>


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="200dp"
            android:id="@+id/roleSpinner">
        </Spinner>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/registerButton"
            android:text="@string/register">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/statusLabel"
            android:text="">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>